--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,7 @@
 @import "main";
 @import "fonts";
 @import "index";
+@import "lighttraffic";
+@import "addlighttraffic";
+@import "login";
+@import "registrer";
