--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
   text-decoration: none;
 }
 
+.displayNone {
+  display: none;
+}
+
 @font-face {
   font-family: "Allan_Bold";
   src: url(../fonts/Allan/Allan-Bold.ttf);
@@ -113,6 +117,10 @@
   margin-bottom: 10px;
 }
 
+#header_banner > div > p {
+  color: white;
+}
+
 .banner_text {
   color: white;
   font-size: 24px;
@@ -214,6 +222,482 @@
   font-size: 24px;
   letter-spacing: 10px;
   margin-top: 10px;
+}
+
+.header_text_traffic h1 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+#header_banner_text {
+  background-color: #ffb636;
+  height: 12vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.banner_text {
+  color: black;
+  font-size: 24px;
+  letter-spacing: 10px;
+  margin-top: 10px;
+}
+
+#gallery_container_lt {
+  height: 100vh;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+.gallery_lt_top {
+  display: flex;
+  height: 50%;
+  width: 100%;
+}
+
+.gallery_lt_top_left {
+  width: 50%;
+  height: 100%;
+  background-image: url(../images/light_traffic1.jpg);
+  background-position: top;
+  background-size: cover;
+  margin-right: 5px;
+}
+
+.gallery_lt_top_right {
+  width: 50%;
+  height: 100%;
+  background-image: url(../images/light_traffic4.jpg);
+  background-position: center;
+  background-size: cover;
+  margin-left: 5px;
+}
+
+.gallery_lt_bottom {
+  display: flex;
+  height: 50%;
+  margin-top: 10px;
+}
+
+.gallery_lt_bottom_left {
+  width: 50%;
+  height: 100%;
+  margin-right: 5px;
+  background-image: url(../images/light_traffic11.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.gallery_lt_bottom_right {
+  width: 50%;
+  height: 100%;
+  margin-left: 5px;
+  background-image: url(../images/light_traffic10.jpg);
+  background-size: cover;
+  background-position: bottom;
+}
+
+#comments_container {
+  background-color: #007f67;
+  color: black;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.comments_title {
+  font-size: 25px;
+  padding-bottom: 1rem;
+  margin-left: 1rem;
+}
+
+.comments_title p {
+  border-bottom: 2px solid white;
+  padding-right: 1rem;
+  display: inline;
+  color: white;
+}
+
+.comments_section {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  border-radius: 20px;
+  display: flex;
+  gap: 10px;
+}
+
+.comments_section input {
+  width: 90%;
+  height: 50px;
+  border-radius: 20px;
+  border: none;
+}
+
+input::placeholder {
+  letter-spacing: 3px;
+  text-align: center;
+  font-family: "Rajdhani_Medium";
+}
+
+.comments_section input:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.comments_section button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.button-17 {
+  align-items: center;
+  appearance: none;
+  background-color: #fff;
+  border-radius: 24px;
+  border-style: none;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px -1px, rgba(0, 0, 0, 0.14) 0 6px 10px 0, rgba(0, 0, 0, 0.12) 0 1px 18px 0;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-flex;
+  fill: currentcolor;
+  font-family: "Rajdhani_Medium";
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: 0.25px;
+  line-height: normal;
+  max-width: 100%;
+  overflow: visible;
+  padding: 2px 24px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+  will-change: transform, opacity;
+  z-index: 0;
+}
+
+.button-17:hover {
+  background: #f6f9fe;
+  color: #000000;
+}
+
+.button-17:active {
+  box-shadow: 0 4px 4px 0 rgba(60, 64, 67, 0.3), 0 8px 12px 6px rgba(60, 64, 67, 0.15);
+  outline: none;
+}
+
+.button-17:focus {
+  outline: none;
+  border: 2px solid #4285f4;
+}
+
+.button-17:not(:disabled) {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0, rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):hover {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 2px 3px 0, rgba(60, 64, 67, 0.15) 0 6px 10px 4px;
+}
+
+.button-17:not(:disabled):focus {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0, rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):active {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 4px 4px 0, rgba(60, 64, 67, 0.15) 0 8px 12px 6px;
+}
+
+.button-17:disabled {
+  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0, rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+}
+
+.comments_list_title {
+  margin-top: 1rem;
+  margin-left: 1rem;
+  font-size: 25px;
+  color: white;
+  border-bottom: 2px solid white;
+  margin-bottom: 2rem;
+}
+
+#form_creation_container {
+  height: 100vh;
+  color: white;
+  display: flex;
+}
+
+#form_creation_container input {
+  font-family: "Rajdhani_Medium";
+  width: 200%;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+}
+
+#form_creation_container label {
+  font-family: "Rajdhani_Medium";
+  margin: 1rem;
+  border-bottom: 2px solid white;
+  padding-right: 1rem;
+}
+
+#form_creation_container button {
+  font-family: "Rajdhani_Medium";
+  margin-top: 1rem;
+  margin-right: 4rem;
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
+
+input[type=file] {
+  color: red;
+  margin-left: 7rem;
+}
+
+.form_left {
+  width: 50%;
+  height: 100%;
+  margin-right: 5px;
+  background-color: #007f67;
+  background-image: url(../images/pngFeu.svg);
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form_right {
+  width: 50%;
+  height: 100%;
+  margin-left: 5px;
+  background-color: black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.form_share {
+  font-size: 80px;
+}
+
+.form_add {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 5rem;
+}
+
+.city_add {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.country_add {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+.coordinate_add {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+#login_container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  color: white;
+}
+
+.login_left {
+  width: 50%;
+  background-image: url(../images/lastBackground.jpg);
+  background-position: right;
+  background-size: cover;
+  margin-right: 5px;
+}
+
+.login_right {
+  width: 50%;
+  background-color: black;
+  margin-left: 5px;
+}
+
+.login_title {
+  text-align: center;
+  font-size: 70px;
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+}
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.login_form_name {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.login_form_name label {
+  border-bottom: 2px solid white;
+}
+
+.login_form_name input {
+  border-radius: 20px;
+  border: none;
+  height: 40px;
+  text-align: center;
+  width: 200%;
+}
+
+label {
+  font-family: "Rajdhani_Medium";
+}
+
+input {
+  font-family: "Rajdhani_Medium";
+}
+
+button {
+  margin-top: 1rem;
+  font-family: "Rajdhani_Medium";
+}
+
+.login_form_password input {
+  border-radius: 20px;
+  border: none;
+  height: 40px;
+  text-align: center;
+  width: 200%;
+}
+
+.login_form_password {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.login_form_password label {
+  border-bottom: 2px solid white;
+}
+
+#registrer_container {
+  height: 100vh;
+  display: flex;
+  color: white;
+}
+
+.registrer_left {
+  width: 50%;
+  background-image: url(../images/lastBackground.jpg);
+  background-position: right;
+  background-size: cover;
+  margin-right: 5px;
+}
+
+.registrer_right {
+  width: 50%;
+  background-color: black;
+  margin-left: 5px;
+}
+
+.registrer_title {
+  text-align: center;
+  font-size: 70px;
+  margin-top: 2rem;
+  margin-bottom: 5rem;
+}
+
+.registrer_form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.registrer_form_confirm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.registrer_form_name {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.registrer_form_name label {
+  border-bottom: 2px solid white;
+}
+
+.registrer_form_name input {
+  border-radius: 20px;
+  border: none;
+  height: 40px;
+  text-align: center;
+  width: 200%;
+}
+
+.registrer_form_password {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.registrer_form_password input {
+  border-radius: 20px;
+  border: none;
+  height: 40px;
+  text-align: center;
+  width: 200%;
+}
+
+.registrer_form_password label {
+  border-bottom: 2px solid white;
+}
+
+.registrer_form_confirm {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.registrer_form_confirm input {
+  border-radius: 20px;
+  border: none;
+  height: 40px;
+  text-align: center;
+  width: 200%;
+}
+
+.registrer_form_confirm label {
+  border-bottom: 2px solid white;
+}
+
+#registrer_container > div.registrer_right > form > button {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 /*# sourceMappingURL=style.css.map */
