--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,59 +246,49 @@
 }
 
 #gallery_container_lt {
-  height: 100vh;
   margin-top: 10px;
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
 }
 
-.gallery_lt_top {
+#articles_container {
+  border: 2px solid red;
   display: flex;
-  height: 50%;
+  margin-bottom: 10px;
+}
+
+.article_container {
+  border: 2px solid;
   width: 100%;
+  height: 20%;
+  position: relative;
 }
 
-.gallery_lt_top_left {
-  width: 50%;
-  height: 100%;
-  background-image: url(../images/light_traffic1.jpg);
-  background-position: top;
-  background-size: cover;
-  margin-right: 5px;
-}
-
-.gallery_lt_top_right {
-  width: 50%;
-  height: 100%;
-  background-image: url(../images/light_traffic4.jpg);
-  background-position: center;
-  background-size: cover;
-  margin-left: 5px;
-}
-
-.gallery_lt_bottom {
+.info_article {
   display: flex;
-  height: 50%;
-  margin-top: 10px;
+  flex-direction: column;
+  position: absolute;
+  padding: 5px;
+  border-radius: 5px;
+  left: 10px;
+  bottom: 10px;
+  gap: 10px;
+  background-color: #007f67;
+  color: white;
 }
 
-.gallery_lt_bottom_left {
-  width: 50%;
-  height: 100%;
-  margin-right: 5px;
-  background-image: url(../images/light_traffic11.jpg);
-  background-size: cover;
-  background-position: center;
+.cityname_title {
+  font-size: 16px;
 }
 
-.gallery_lt_bottom_right {
-  width: 50%;
-  height: 100%;
-  margin-left: 5px;
-  background-image: url(../images/light_traffic10.jpg);
-  background-size: cover;
-  background-position: bottom;
+.upload_image {
+  width: 100%;
+  height: 20%;
+}
+
+.country_title {
+  font-size: 32px;
 }
 
 #comments_container {
@@ -509,7 +499,7 @@ input[type=file] {
   margin-bottom: 1rem;
 }
 
-.coordinate_add {
+.coordonate_add {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
