--- a/assets/scss/_addlighttraffic.scss
+++ b/assets/scss/_addlighttraffic.scss
@@ -91,7 +91,7 @@ input[type="file"] {
   margin-bottom: 1rem;
 }
 
-.coordinate_add {
+.coordonate_add {
   display: flex;
   flex-direction: column;
 
